[package]
name = "lvp"
version = "1.2.0"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/Protryon/axum-util"
description = "Misc utilities for axum (dynamic TLS, OIDC, logger, errors, CORS, and JWT auth)"
keywords = [ "axum", "misc", "util" ]

[dependencies]
tonic = "0.9"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
futures = "0.3"
hyper = "0.14"
http = "0.2"
http-body = "0.4"
pin-project = "1.0"
tower-service = "0.3"
tower-layer = "0.3"
lazy_static = "1.4"
hyper-unix-connector = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
indexmap = { version = "1.9", features = ["serde"] }
serde_json = "1.0"
anyhow = "1.0"
libc = "0.2"
kube = { version = "0.83.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
always_cell = "0.1"

[build-dependencies]
tonic-build = "0.9"